# NEXUS

./: README.md
cloud-db/: .env.example  .gitignore  API.md  CMakeLists.txt  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  docker-entrypoint-backend.sh  docker-entrypoint.sh
cloud-db/ai_service/: README_WAREHOUSE_AGENT.md  nexus_warehouse_agent.py  python_helper.py  requirements.txt  requirements_warehouse_agent.txt  start.sh  start_warehouse.sh
cloud-db/backend/: Dockerfile
cloud-db/docs/: GOOGLE_OAUTH_SETUP.md  POSTGRESQL_MIGRATION_GUIDE.md
cloud-db/frontend/: index.html
cloud-db/include/: api.h  auth.h  db.h
cloud-db/infra/: cloud_sql.tf  setup_cloud_sql.sh
cloud-db/scripts/: migrate_sqlite_to_postgres.py
cloud-db/src/: api.c  auth.c  db.c  main.c
core-c/: .gitignore  8080  8080-shm  8080-wal  CMakeLists.txt  GDRIVE_SETUP.md  Makefile  QUICKSTART.md  README.md  build.sh  gdrive_helper.py
core-c/frontend/: index.html
core-c/frontend/js/: app.js
core-c/include/: auth.h  db.h
core-c/src/: api.c  auth.c  db.c  main.c
nano-banana/: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  Makefile  SETUP.md  docker-compose.yml  docker-entrypoint-backend.sh  docker-entrypoint.sh
nano-banana/ai_service/: .dockerignore  Dockerfile  python_helper.py  requirements.txt
nano-banana/backend/: .dockerignore  Dockerfile
nano-banana/frontend/: .dockerignore  Dockerfile  index.html  nginx.conf
nano-banana/frontend/js/: app.js
nano-banana/include/: api.h  auth.h  db.h
nano-banana/src/: api.c  auth.c  db.c  main.c
(+2 files in other folders)
